--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -35,7 +35,7 @@
           </div>
       </div>
       <!-- class="col-12 col-lg-3"  -->
-      <div class="col-12 col-lg-3 col-md-5" id="postInfo">
+      <div class="col-12 col-lg-3 col-md-5 position-relative" id="postInfo">
           <div id="accordion">
               <div class="card">
                   <div class="card-header" id="headingOne">
