--- a/ifac_si_app/src/app/component/notification/notification.component.html
+++ b/ifac_si_app/src/app/component/notification/notification.component.html
@@ -1,32 +1,34 @@
-<h2>Notificações<i class="bi bi-bell"></i></h2>
-<section *ngFor="let notificacao of notificacoes">
-    <div id="notificationsView"      
-    [class.deleteView]="notificacao.tipoAcao == 'DELETAR'"
-    [class.addView]="notificacao.tipoAcao === 'ADICIONAR'"
-    [class.updateView]="notificacao.tipoAcao === 'EDITAR'"
-    (click)="alertTeste(notificacao)">
-        <div id="avatar-notification">
-            <div class="avatar-circle">
-                <img src="../../../assets/images/avatar.png" alt="Avatar do usuário">
+<div id="fundo">
+    <h2>Notificações<i class="bi bi-bell"></i></h2>
+    <section *ngFor="let notificacao of notificacoes">
+        <div id="notificationsView"      
+        [class.deleteView]="notificacao.tipoAcao == 'DELETAR'"
+        [class.addView]="notificacao.tipoAcao === 'ADICIONAR'"
+        [class.updateView]="notificacao.tipoAcao === 'EDITAR'"
+        (click)="alertTeste(notificacao)">
+            <div id="avatar-notification">
+                <div class="avatar-circle">
+                    <img src="../../../assets/images/avatar.png" alt="Avatar do usuário">
+                </div>
+            </div>
+            <div id="notification">
+                <div id="notificationData">
+                    <p>{{notificacao.post.usuario?.nomeUsuario}}</p> 
+                    <ng-template [ngIf]='notificacao.tipoAcao == "DELETAR"'>
+                        <p> deletou um post</p>
+                    </ng-template>   
+                    <ng-template [ngIf]='notificacao.tipoAcao == "ADICIONAR"'>
+                        <p> adicionou um novo post</p>
+                    </ng-template>
+                    <ng-template [ngIf]='notificacao.tipoAcao == "EDITAR"'>
+                        <p> editou um post</p>
+                    </ng-template> 
+                </div>
+                <div id="notificationTitle">
+                    <p>{{notificacao.post.titulo}}</p>
+                </div>
             </div>
         </div>
-        <div id="notification">
-            <div id="notificationData">
-                <p>{{notificacao.post.usuario?.nomeUsuario}}</p> 
-                <ng-template [ngIf]='notificacao.tipoAcao == "DELETAR"'>
-                    <p> deletou um post</p>
-                </ng-template>   
-                <ng-template [ngIf]='notificacao.tipoAcao == "ADICIONAR"'>
-                    <p> adicionou um novo post</p>
-                </ng-template>
-                <ng-template [ngIf]='notificacao.tipoAcao == "EDITAR"'>
-                    <p> editou um post</p>
-                </ng-template> 
-            </div>
-            <div id="notificationTitle">
-                <p>{{notificacao.post.titulo}}</p>
-            </div>
-        </div>
-    </div>
-</section>
+    </section>
+</div>
 
