--- a/ifac_si_app/src/styles.css
+++ b/ifac_si_app/src/styles.css
@@ -7,3 +7,9 @@
 html, body, app-root {
     height: 100%;
 }
+
+.ql-toolbar.ql-snow {
+  background-color: white !important;
+  border-bottom: 2px solid #8b8a8a !important;
+  color: #000 !important;
+}
